# neural-public

./: .gitignore  pyproject.toml  requirements.txt
.github/workflows/: main_neural-demo1.yml
.streamlit/: config.toml  secrets.toml
neuralchat/: main.py  scratch
neuralchat/core/: Home.py  User.py  azure.py  azureai.py  cosmos.py  login.py  profile.py
neuralchat/pages/: Home.py  autogen.py  files.py  langchain.py  profile.py
styles/: login.css
